--- a/css/panel.css
+++ b/css/panel.css
@@ -1,6 +1,9 @@
 body{
     background-color: #e0d2d23b;
 }
+.title{
+    font-size: 50px;
+}
 .tarjetas{
     align-items: center;
     justify-content: space-around;
@@ -13,25 +16,34 @@ body{
     background-color: #ffffff;
     border-radius: 10px;
     padding: 5px;
-    text-align: center;
+    text-align: left;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out;  
+    font-size: 25px;
+    width: 300px;
+    height: 200px;
 }
 .tarje2{
     background-color: #ffffff;
     border-radius: 10px;
     padding: 5px;
-    text-align: center;
+    text-align: left;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease-in-out;  
+    transition: transform 0.3s ease-in-out; 
+    font-size: 20px; 
+    width: 300px;
+    height: 200px;
 }
 .tarje3{
     background-color: #ffffff;
     border-radius: 10px;
     padding: 5px;
-    text-align: center;
+    text-align: left;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out;  
+    font-size: 25px;
+    width: 300px;
+    height: 200px;
 }
 .titlebutoom{
     align-items: center;
@@ -86,6 +98,7 @@ body{
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    width: 100%;
 }
 .curso2{
     background-color: #ffffff;
@@ -156,4 +169,57 @@ body{
     text-align: left;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out;  
+}
+@media (max-width: 600px) {
+  .tarjetas,
+  .cursos,
+  .lado,
+  .titlebutoom {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .tarje1,
+  .tarje2,
+  .tarje3,
+  .curso1,
+  .curso2,
+  .curso3,
+  .recientes,
+  .a1,
+  .a2,
+  .a3 {
+    width: 90%;
+    font-size: 18px;
+    margin-top: 20px;
+  }
+
+  .title {
+    font-size: 30px;
+    text-align: center;
+  }
+
+  .buttoncursos button,
+  .titlebutoom button {
+    width: 100%;
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+
+  .curso1 img,
+  .curso2 img,
+  .curso3 img {
+    height: auto;
+  }
+
+  .imgactividad {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .imgactividad img {
+    width: 60px;
+    margin-bottom: 5px;
+  }
 }
